discussion/kv_engine/153975/153975_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add support for Group Commit

Group Commit coalesces transactions in the WAL by grouping transactions
at the point of WAL fsync. If there are other writer threads wanting to
do a transaction, the current transaction will stall waiting for other
transactions to go. If there are no waiting transactions, the current
transaction will fsync and wait for all pending fsyncs to complete their
transactions before completing its transaction and trying write cache
flush.

Add magma_enable_group_commit and magma_wal_sync_time.

Change-Id: I23ae7c014691a873d9201021998fc062cc0b6549

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-05-19 19:06:28.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-19 19:20:01.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9028/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28: error: no member named "EnableGroupCommit" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.EnableGroupCommit =
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9028/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9028/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35894/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(445): error C2039: "EnableGroupCommit": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35894/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30680/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30680/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10722/ : FAILURE

Compile error at [2021-05-19T19:08:57.571Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28:
error: ?struct magma::Magma::Config? has no member named ?EnableGroupCommit?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10722/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10981/ : FAILURE

Compile error at [2021-05-19T19:12:42.561Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10981/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9650/ : FAILURE

Compile error at [2021-05-19T19:10:48.117Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9650/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10581/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
[2021-05-19T19:19:18.201Z] ../kv_engine/tests/testapp/testapp_sasl.cc:325: Failure
[2021-05-19T19:19:18.201Z] Expected equality of these values:
[2021-05-19T19:19:18.201Z]   cb::mcbp::Status::NotMyVbucket
[2021-05-19T19:19:18.201Z]     Which is: I"m not responsible for this vbucket
[2021-05-19T19:19:18.201Z]   getRsp.getStatus()
[2021-05-19T19:19:18.201Z]     Which is: Not found
[2021-05-19T19:19:18.201Z] [  FAILED  ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp, where GetParam() = Mcbp (27 ms)
TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10581/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18533/ : FAILURE

Compile error at [2021-05-19T19:15:19.169Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18533/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7580/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
